Wasn't able to resolve gap between skills and contact

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,4 +1,7 @@
-
+#Contact{
+    border-style: solid;
+    border-color: transparent;
+}
 
 .Email_Container{
    
